<package format="2">
  <name>follow_waypoints_mapviz_plugin</name>
  <version>0.3.1</version>
  <description>
      This mapviz plugin will send a reset, execute, or abort command to the follow_waypoints node.  
  </description>
  <maintainer email="knickels@trinity.edu">Kevin Nickels</maintainer>
  <author email="knickels@trinity.edu">Kevin Nickels</author>
  <license>BSD</license>
  <url type="repository">https://github.com/swri-robotics/mapviz</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>qt5-qmake</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5-opengl-dev</build_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>mapviz</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>

  <export>
    <mapviz plugin="${prefix}/mapviz_plugins.xml" />
  </export>

</package>
