<package format="3">
  <name>mapviz_interfaces</name>
  <version>2.0.0</version>
  <description>
     ROS interfaces used by Mapviz
  </description>
  <author>P. J. Reed</author>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/mapviz</url>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>marti_common_msgs</build_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
